--- a/Pattern & Series Exam/Question_2.htm
+++ b/Pattern & Series Exam/Question_2.htm
@@ -15,11 +15,19 @@
         {
             if((i==1&&j==2)||(i==2&&j==6)||(i==3&&j==5)||(i==4&&j==4 ))
             document.write("* ");
-            else if((i==5&&j==3)||(i==6&&j==4)||(i==7&&j==5)||(i==8&&j==6)||(i==9&&j==7))
+            else if((i==5&&j==3)||(i==6&&j==4))
         {
             document.write( "*");
         }
-        else if((i==2&&j==8)||(i==3&&j==9)||(i==4&&j==10)||(i==5&&j==11)||(i==6&&j==10)||(i==7&&j==9)||(i==8&&j==8))
+        else if((i==7&&j==5)||(i==8&&j==6)||(i==9&&j==7))
+        {
+             document.write( "*");
+        }
+        else if((i==5&&j==11)||(i==6&&j==10)||(i==7&&j==9)||(i==8&&j==8))
+        {
+             document.write( "*");
+        }
+        else if((i==2&&j==8)||(i==3&&j==9)||(i==4&&j==10))
         {
             document.write( "*");
         }
