--- a/Array all Programs/Array part-2/Question-7/index.htm
+++ b/Array all Programs/Array part-2/Question-7/index.htm
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <!--all in on program -->
+    <!--all in on method programm -->
     <script src="main.js"></script>
 </body>
 </html>
