--- a/swaping and basic quetions/question3.htm
+++ b/swaping and basic quetions/question3.htm
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 <body>
-    <!--WAP TO SWAP TWO VALUES OF THE VARIABLE WITHOUT THIRD VARIABLE AND WITHOUT (+ , - )-->
+    <!--WAP TO SWAP TWO VALUES OF THE VARIABLE WITHOUT THIRD VARIABLE AND WITHOUT (+ , - ). -->
 
     
      <script>
