--- a/swaping and basic quetions/question4.htm
+++ b/swaping and basic quetions/question4.htm
@@ -16,7 +16,7 @@
              let sub = x - y ;
              let mult = x * y ;
              let div = x / y ;
-             let module = x %y ;
+             let module = x % y ;
              let power = x ** y ;
  
 
@@ -25,9 +25,9 @@
             let b = parseInt(y);
 
             document.write('The sum of two values is : ', sum+ " ");
-            document.write('The sub of two values is : ', sub + " ");
-            document.write('The mult of two values is : ', mult + " ");
-            document.write('The div of two values is : ', div + " ");
+            document.write('The substraction of two values is : ', sub + " ");
+            document.write('The multiplication of two values is : ', mult + " ");
+            document.write('The division of two values is : ', div + " ");
             document.write('The module of two values is : ', module + " ");
             document.write('The power of two values is : ', power + " ");
 
