--- a/question_1.htm
+++ b/question_1.htm
@@ -10,7 +10,7 @@
     <!--0 3 8 15 24 35 48.........-->
 
     <script>
-
+ssssssssssssssssssssssssssssssssssssssssssssss
         let  i = 0;
         let n = prompt("Enter N : ");
         let start = 3 ;
